# lr-schedulers

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.claude/commands/: add-tests.md  build.md  code.md  commit.md  create-branch.md  explore.md  plan.md  pr.md
.devcontainer/: devcontainer.json
docs/: architecture.md  building-instructions.md  code-style.md  common-commands.md  common-implementation-approach.md  developer-environment-setup.md  git-guidelines.md  project-improvements.md  project-knowledge.md  project-requirements.md  testing-instructions.md
src/: constant.rs  constantlr.rs  cosine_annealing.rs  cosine_annealing_warm_restarts.rs  cosineannealinglr.rs  cyclic.rs  exponential.rs  exponentiallr.rs  lib.rs  linear.rs  linearlr.rs  multiplicative.rs  multistep.rs  onecycle.rs  polynomial.rs  reduce_lr_on_plateau.rs  step.rs
