[package]
name = "lr-schedulers"
version = "0.1.0-alpha.0"
edition = "2021"
description = "Learning rate schedulers in Rust."
repository = "https://github.com/yusekiya/lr-schedulers"
keywords = ["machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme="README.md"

[dependencies]

[dev-dependencies]
approx = "0.5.1"
